# rolldown

./: Cargo.toml  cspell.json  package.json  pnpm-lock.yaml
crates/rolldown/: Cargo.toml
crates/rolldown/src/ecmascript/: ecma_generator.rs
crates/rolldown/src/ecmascript/format/: cjs.rs  iife.rs  mod.rs
crates/rolldown/src/module_finalizers/scope_hoisting/: impl_visit_mut.rs  mod.rs
crates/rolldown/src/module_loader/: module_loader.rs
crates/rolldown/src/stages/generate_stage/: code_splitting.rs
crates/rolldown/src/stages/link_stage/: mod.rs
crates/rolldown/src/utils/: apply_inner_plugins.rs  load_source.rs  normalize_options.rs  parse_to_ast.rs  renamer.rs
crates/rolldown/src/utils/chunk/: mod.rs  namespace_marker.rs  render_chunk_exports.rs  render_interop.rs
crates/rolldown/tests/snapshots/: fixtures__filename_with_hash.snap  integration_rolldown__filename_with_hash.snap
crates/rolldown_binding/src/options/binding_output_options/: amd.rs  mod.rs  (+1 more)
crates/rolldown_binding/src/utils/: normalize_binding_options.rs
crates/rolldown_common/src/: lib.rs
crates/rolldown_common/src/inner_bundler_options/: mod.rs
crates/rolldown_loader_utils/src/: base64_to_esm.rs  binary_to_esm.rs
crates/rolldown_loader_utils/src/binary_to_esm/: mod.rs  to_binary.js
crates/rolldown_plugin_http_resolve/: Cargo.toml
crates/rolldown_plugin_http_resolve/src/: http_resolve_plugin.rs  lib.rs  transformer.rs  utils.rs
crates/rolldown_testing/: _config.schema.json
crates/rolldown_utils/: Cargo.toml
crates/rolldown_utils/src/: mime.rs
docs/contrib-guide/: docs.md
(+24 files in other folders)
