[package]
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "rolldown_plugin_http_resolve"
repository.workspace = true
version              = "0.0.1"

[dependencies]
anyhow          = { workspace = true }
dashmap         = { workspace = true }
phf             = { workspace = true }
reqwest         = { workspace = true }
rolldown_common = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_utils  = { workspace = true }
rustc-hash      = { workspace = true }
url             = { workspace = true }

[lints]
workspace = true
